@@ -3,11 +3,13 @@
 #include "cstring.h"
 
 CString::CString()
-{ buffer=0; length=alloc_len=0;
+{ 
+  buffer=0; length=alloc_len=0;
 }
 
 CString::CString(const CString &s)
-{ if ((const char *)s!=0)
+{ 
+  if ((const char *)s!=0)
   {
     CheckPointer(buffer=new char[(length=alloc_len=s.Length())+1],
                  "CString::copy constructor::buffer allocation");
@@ -35,16 +37,19 @@ CString::CString(const char *cp)
 }
 
 CString::~CString()
-{ if (buffer) delete [] buffer;
+{ 
+  if (buffer) delete [] buffer;
   buffer=0; length=alloc_len=0;
 }
 
 CString::operator char*()
-{ return buffer;
+{ 
+  return buffer;
 }
 
 CString::operator const char*() const
-{ return buffer;
+{ 
+  return buffer;
 }
 
 CString CString::substr(size_t i,size_t j) const
@@ -69,7 +74,8 @@ CString CString::substr(size_t i,size_t j) const
 
 
 CString& CString::operator +=(const CString &s)
-{ char *cp=new char[(length=alloc_len=length+s.Length())+1];
+{ 
+  char *cp=new char[(length=alloc_len=length+s.Length())+1];
   CheckPointer(cp,"CString::operator +=::memory allocation");
   *cp=0; if (buffer) strcpy(cp,buffer);
   if ((const char *)s) strcat(cp,(const char *)s);
@@ -104,7 +110,8 @@ CString& CString::operator +=(const char &c)
 
 
 CString& CString::operator =(const CString &s)
-{ if (buffer) delete[] buffer;
+{ 
+  if (buffer) delete[] buffer;
   if ((const char *)s!=0)
     {
       buffer=new char[(length=alloc_len=s.Length())+1];
@@ -121,39 +128,45 @@ CString& CString::operator =(const CString &s)
 
 
 
-
 /* Due to bad class design in my code, the following does not work
    any more with GCC 2.8 
 
 char& CString::operator[](const size_t index)
-{ CheckUpperBound(index,length,"CString::operator[]");
+{ 
+  CheckUpperBound(index,length,"CString::operator[]");
   return *(buffer+index);
 }
 
 char& CString::operator[](const size_t index) const
-{ CheckUpperBound(index,length,"CString::operator[]");
+{ 
+  CheckUpperBound(index,length,"CString::operator[]");
   return *(buffer+index);
 }
 
 It is replaced with the following:
 */
 
+
 char& CString::charAt(const size_t index) const
-{ CheckUpperBound(index,length,"CString::operator[]");
+{ 
+  CheckUpperBound(index,length,"CString::operator[]");
   return *(buffer+index);
 }
 
 char& CString::setCharAt(const size_t index, const char& c)
-{ CheckUpperBound(index,length,"CString::operator[]");
+{ 
+  CheckUpperBound(index,length,"CString::operator[]");
   return *(buffer+index) = c;
 }
 
 int CString::operator== (const CString &s) const
-{ return ((*this)==(const char*)s);
+{ 
+  return ((*this)==(const char*)s);
 }
 
 int CString::operator== (const char *s) const
-{ if (s==0||buffer==0)
+{ 
+  if (s==0||buffer==0)
     return s==buffer;
   if (strlen(s)==length)
     return !strcmp((const char*)s,buffer);
@@ -161,17 +174,17 @@ int CString::operator== (const char *s) const
 }
 
 int CString::operator== (char *s) const
-{ if (s==0||buffer==0)
+{ 
+  if (s==0||buffer==0)
     return s==buffer;
   if (strlen(s)==length)
     return !strcmp((const char*)s,buffer);
   else return 0;
 }
 
-
-
 CString operator + (const CString &s1, const CString &s2)
-{ CString tmp;
+{ 
+  CString tmp;
 
   tmp=s1;
   tmp+=s2;
@@ -179,7 +192,8 @@ CString operator + (const CString &s1, const CString &s2)
 }
 
 ostream& operator << (ostream& o, const CString&s)
-{ o << (const char *)s;
+{ 
+  o << (const char *)s;
   return o;
 }
 
@@ -203,9 +217,9 @@ istream& operator >> (istream& i, CString&s)
 }
 
 size_t CString::Length() const
-{ return length;
+{ 
+  return length;
 }
-
 
 CString upcase(const CString& src)
 {
@@ -217,4 +231,3 @@ CString upcase(const CString& src)
 
   return ret;
 }
-
