@@ -1,4 +1,7 @@
 Diskpoll 0.1.4, not yet released
+ - When receiving a .PKT file and a file with this name already exists, the
+   new file is longer renamed to .PK1, but the base name (before the dot) is
+   changed. Some tossers did not properly recognise .PK1 files.
  - Adaptions for BeOS (merged from 0.1.3-stable branch)
 
 Diskpoll 0.1.3-stable, forked off for release on 05 Aug 2000
